2009-09-09  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_network_components.php: add bool param $localComponent
	for to filter the tree when it's a local component.

2009-09-09  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/agentes/massive_edit_modules.php: add the last required field
	(Export) in the form.
	Fixes: 2848951

2009-09-09  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/agentes/massive_edit_modules.php: add more (user and pass for
	wmi or plugin) fields to massive edit.

2009-09-09  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_db.php: add new function "get_all_groups", this function
	return all groups.
	* operation/agentes/ver_agente.php: add another code block for to respond
	new ajax request (new select in form massive_edit_modules.php).
	* godmode/agentes/massive_edit_modules.php: Fix in part bug #2848951 in
	tracker sourceforge, rest things for to do is add more fields.

2009-09-07  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/agentes/massive_edit_modules.php: now the select of
	Module name have got all modules but you can filter in the select of
	Module type. Fix in part bug #2848951 in tracker sourceforge, exactly
	the first paragraph of bug.
	
2009-09-07  Miguel de Dios  <miguel.dedios@artica.es>

	* include/javascript/pandora_modules.js: add events for selects in
	local modules form:
	* godmode/agentes/module_manager_editor.php: add ajax request for local
	modules form.

2009-09-04  Sancho Lerena <slerena@artica.es>

	* pandoradb.sql: Commented server type codes.

	* godmode/servers/manage_export_form.php: Fixed problem assigning 
	export server because wasn't using the new server_type field.

2009-09-04  Raul Mateos  <raulofpandora@gmail.com>

	* include/config_process.php: Update build after last changes.

	* godmode/modules/manage_nc_groups*.php,
	godmode/modules/manage_network_components_form*.php: Unify titles
	improving integrity of appearance.
