@@ -31,6 +31,7 @@ function html_entity_decode (str) {
 		return "";
 	var ta = document.createElement ("textarea");
 	ta.innerHTML = str.replace (/</g, "&lt;").replace (/>/g,"&gt;");
+
 	return ta.value;
 }
 
